# proyecto-simple

./: README.md  pyproject.toml
notebooks/: Untitled.ipynb  Untitled1.ipynb
src/proyecto_simple/: __init__.py  __main__.py  settings.py
